# asynctasq-benchmark-celery

./: .env.example  .gitignore  BENCHMARK_OPTIMIZATIONS.md  CONTRIBUTING.md  DEPENDENCY_STRATEGY.md  IMPLEMENTATION.md  OPTIMIZATION_QUICK_REF.md  PERFORMANCE_FIXES.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  REDIS_DATABASE_SEPARATION.md  WORKER_SETUP.md  benchmarking-plan.md  example_benchmark.py  justfile  pyproject.toml  quick-start.sh  verify_database_separation.py
analysis/: __init__.py  analyzer.py  report_generator.py  visualizer.py
benchmarks/: __init__.py  common.py  runner.py  scenario_1_throughput.py  scenario_2_io_bound.py  scenario_3_cpu_bound.py  scenario_4_mixed.py  scenario_registry.py  worker_manager.py
infrastructure/: Dockerfile.mock-api  README.md  docker-compose.yml  mock_api.py
infrastructure/grafana/provisioning/dashboards/: dashboard.yml
infrastructure/grafana/provisioning/datasources/: prometheus.yml
infrastructure/prometheus/: prometheus.yml
tasks/: __init__.py  asynctasq_tasks.py  celery_tasks.py
