[project]
name = "asynctasq-benchmark-celery"
version = "0.1.0"
description = "Comprehensive benchmarking suite for AsyncTasQ vs Celery"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "AsyncTasQ Contributors" }]

dependencies = [
    # Core packages
    "celery>=5.6.0",
    "kombu>=5.6.0",
    
    # AsyncTasQ
    "asynctasq>=0.9.15",
    
    # Redis: Latest stable with hiredis for performance
    "redis[hiredis]>=7.1.0",
    
    
    # HTTP clients for I/O-bound benchmarks
    "httpx>=0.28.1",
    "requests>=2.32.3",
    "aiohttp>=3.11.10",
    
    # Monitoring and metrics
    "prometheus-client>=0.21.1",
    "psutil>=6.1.1",
    
    # Data analysis (latest stable)
    "pandas>=2.2.3",
    "numpy>=2.2.1",
    "scipy>=1.15.1",
    
    # Visualization
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    
    # Testing and profiling (latest stable Dec 2025)
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.1.0",
    "locust>=2.42.6",
    
    # Utilities
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "typer>=0.15.1",
    "rich>=13.9.4",
    "msgpack>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
    "pyright>=1.1.407",
    "py-spy>=0.4.0",
    "memory-profiler>=0.61.0",
    "ipython>=8.31.0",
    "jupyter>=1.1.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["benchmarks", "tasks", "analysis"]
force-sort-within-sections = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 12
max-returns = 6
max-statements = 50

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"  # Use basic mode for better compatibility with external libraries
reportMissingImports = false  # Many packages don't have type stubs
reportMissingTypeStubs = false
reportAttributeAccessIssue = false  # External libraries (celery, asynctasq) may lack type info
reportFunctionMemberAccess = false  # Celery decorators add dynamic methods
reportArgumentType = false  # Allow more flexibility with external library types
reportReturnType = "warning"  # Warn but don't fail on return type mismatches
reportUnsupportedDunderAll = false  # Allow __all__ to specify future exports

[tool.hatch.build.targets.wheel]
packages = ["benchmarks", "tasks", "analysis"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "benchmark: Benchmark tests",
]
